--- a/view/frontend/templates/component/shipping/method/inpostinternationalcourier_courier.phtml
+++ b/view/frontend/templates/component/shipping/method/inpostinternationalcourier_courier.phtml
@@ -1,6 +1,7 @@
-<button id="inpost-select-picker" type="button" class="action primary">
+<button id="inpost-select-picker" type="button" class="action update btn btn-secondary">
     <?= /* @noEscape */ __('Select pickup point') ?>
 </button>
+<div id="inpost-locker-logo-wrapper"></div>
 <div id="inpost_locker-selected" style="display:none">
     <div>
         <strong><?= /* @noEscape */ __('Selected locker:') ?></strong>
